# Hugging-Face-Course

./: pyproject.toml
LLM-Course/Ch1/: 1.1_Transformers,_what_can_they_do_.ipynb  1.2_Bias_and_limitations.ipynb
LLM-Course/Ch2/: 2.1_Behind_the_pipeline.ipynb  2.2_Models.ipynb  2.3_Tokenizers.ipynb  2.4_Handling_multiple_sequences.ipynb  2.5_Putting_it_all_together.ipynb
LLM-Course/Ch3/: 3.1_Processing_the_data.ipynb  3.2_Fine_tuning_a_model_with_the_Trainer_API.ipynb  3.3_A_full_training.ipynb
LLM-Course/chapter01/: 1.1_Transformers,_what_can_they_do_.ipynb  1.2_Bias_and_limitations.ipynb
LLM-Course/chapter02/: 2.1_Behind_the_pipeline.ipynb  2.2_Models.ipynb  2.3_Tokenizers.ipynb  2.4_Handling_multiple_sequences.ipynb  2.5_Putting_it_all_together.ipynb  2.6_Optimized_inference_deployment.ipynb
LLM-Course/chapter03/: 3.1_Processing_the_data.ipynb  3.2_Fine_tuning_a_model_with_the_Trainer_API.ipynb  3.3_A_full_training.ipynb  3.4_Understanding_learning_curves.ipynb
LLM-Course/chapter04/: 4.1_Using_pretrained_models.ipynb  4.2_Sharing_pretrained_models.ipynb
LLM-Course/chapter05/: 5.1_What_if_my_dataset_isn't_on_the_Hub.ipynb  5.2_Time_to_slice_and_dice.ipynb  5.3_Big_data_🤗_Datasets_to_the_rescue!.ipynb  5.5_Semantic_search_with_FAISS.ipynb
LLM-Course/chapter06/: 6.1_Training_a_new_tokenizer_from_an_old_one.ipynb  6.2_Fast_tokenizers'_special_powers.ipynb  6.3_Fast_tokenizers_in_the_QA_pipeline.ipynb  6.4_Normalization_and_pre_tokenization.ipynb  6.5_Byte_Pair_Encoding_tokenization.ipynb  6.6_WordPiece_tokenization.ipynb  6.7_Unigram_tokenization.ipynb  (+2 more)
