[project]
name = "huggingface-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "gradio>=6.11.0",
    "huggingface-hub[all]>=1.9.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "openai>=2.31.0",
    "psutil>=7.2.2",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "trackio>=0.22.0",
    "transformers[sentencepiece,sklearn,torch,retrieval]>=5.7.0",
    "vllm>=0.20.0",
    "zstandard>=0.25.0",
]
